--- a/app/src/main/res/layout/activity_aturobat.xml
+++ b/app/src/main/res/layout/activity_aturobat.xml
@@ -36,8 +36,8 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:context="com.example.gungde.reminder_medicine.MainActivity"
-                tools:showIn="@layout/activity_main">
+                tools:context="com.example.gungde.reminder_medicine.Home"
+                tools:showIn="@layout/activity_home">
 
                 <ImageView
                     android:layout_width="70dp"
